# preFire

./: .gitattributes  .gitignore  CNAME  CONVERSION_GUIDE.md  LICENSE  README.md  SUMMARY.md  about.html  article.html  banlist.html  cards-and-decks.html  cards.html  decks.html  events.html  fetch_and_convert.py  i18n.js  index.html  legality.html  more-resources.html  pillars.js  rules.html  styles.css
.github/workflows/: banlist.yml  build-decks.yml  decks.yml  events.yml
INPUT/banlists/: banlist.js  watchlist.js
INPUT/decklists/: Ad_Nauseum.txt  Affinity.txt  Angel_Pod.txt  Boros_Burn.txt  Death_And_Taxes_W.txt  Eldrazi_Tron.txt  Grixis_Twin.txt  Hollow_One.txt  Human.txt  Infect.txt  Jeskai_Twin.txt  Jund_Classic.txt  Phoenix_R.txt  Phoenix_UR.txt  UR_Twin.txt  Zombridge.txt
INPUT/eventlist/: events.txt
RESOURCES/data/lists/: cards.json  decks-with-images.json  decks.json  events.js  watchlist.js
RESOURCES/favicon/: site.webmanifest
RESOURCES/img/set_icons/: setIcons.js
RESOURCES/script/: banlist.js  cards-and-decks.js  cards.js  decks.js  events.js  index.js  more-resources.js
RESOURCES/script/modules/: card3d.js  drawCards.js  getJSON.js  hoverCard.js  nav.js  utils.js
RESOURCES/style/: style.css
SCRIPTS/: banlist.sh  deckJSONToRegistry.py  deckTextToJSON.py  events.sh  fetch_card_image.py  lowercase_webp.py  pyproject.toml
SCRIPTS/prefire_scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
images/: .gitkeep
